--- a/Traffic-Light/src/modules/Styles/TrafficLight.css
+++ b/Traffic-Light/src/modules/Styles/TrafficLight.css
@@ -2,46 +2,46 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    height: 100vh;
 }
-.pole {
-    position: absolute; /* Position the pole relative to the container */
-    bottom: 109px; /* Adjust as needed to position the pole */
-    width: 10px; /* Adjusted width for the pole to be thinner */
-    height: 200px; /* Adjusted height for the pole */
-    background-color: #333; /* Dark color for the pole */
-    border-radius: 5px; /* Slight rounding for a more polished look */
 
+.pole {
+    position: absolute;
+    bottom: 109px;
+    width: 10px;
+    height: 200px;
+    background-color: #333;
+    border-radius: 5px;
 }
 
 .container {
-    background-color: #333; /* Dark background for the traffic light container */
-    width: 80px; /* Width of the traffic light */
+    background-color: #333;
+    width: 80px;
     padding: 20px;
-    border-radius: 20px; /* Rounded corners */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow for a 3D effect */
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     display: flex;
-    flex-direction: column; /* Stack lights vertically */
-    align-items: center; /* Center lights horizontally */
+    flex-direction: column;
+    align-items: center;
 }
 
 .light {
-    width: 50px; /* Diameter of the lights */
+    width: 50px;
     height: 50px;
-    margin: 10px 0; /* Space between lights */
-    border-radius: 50%; /* Circular lights */
-    background-color: #333; /* Default background for the lights */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Shadow for a 3D effect */
+    margin: 10px 0;
+    border-radius: 50%;
+    background-color: #333;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .red {
-    background-color: red; /* Red light */
+    background-color: red;
 }
 
 .yellow {
-    background-color: yellow; /* Yellow light */
+    background-color: yellow;
 }
 
 .green {
-    background-color: green; /* Green light */
+    background-color: green;
 }
