--- a/Traffic-Light/src/modules/Styles/TrafficLight.css
+++ b/Traffic-Light/src/modules/Styles/TrafficLight.css
@@ -1,3 +1,29 @@
+.cycle {
+    position:absolute;
+    top:100%;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 36px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    
+}
+.add {
+    position:absolute;
+    top:100%;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 36px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    
+}
 .traffic-light {
     display: flex;
     justify-content: center;
@@ -7,11 +33,12 @@
 
 .pole {
     position: absolute;
-    top:90%;
+    top:99%;
     width: 10px;
     height: 280px;
     background-color: #333;
     border-radius: 5px;
+    z-index: -1;
 }
 
 .container {
