--- a/Traffic-Light/src/modules/Styles/TrafficLight.css
+++ b/Traffic-Light/src/modules/Styles/TrafficLight.css
@@ -1,3 +1,13 @@
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin-top: -250px; /* messes where the whole app is centered in heigh */
+}
+
 .cycle {
     position: absolute;
     top: 100%;
@@ -9,6 +19,7 @@
     cursor: pointer;
     font-size: 36px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    margin-top: -250px; /* Height of Button */
 }
 
 .add {
@@ -22,6 +33,7 @@
     cursor: pointer;
     font-size: 36px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    margin-top: -250px; /* Height of Button */
 }
 
 .traffic-light {
